--- a/src/index.styles.scss
+++ b/src/index.styles.scss
@@ -18,6 +18,12 @@ div {
 	font-family: "Montserrat";
 }
 
+ul {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
 button {
 	cursor: pointer;
 }
