--- a/src/index.styles.scss
+++ b/src/index.styles.scss
@@ -1,5 +1,5 @@
 h1 {
-	font-family: "Lato";
+	font-family: "Raleway";
 }
 
 * {
@@ -9,6 +9,7 @@ h1 {
 body {
 	margin: 0;
 	padding: 0;
+	width: 100%;
 }
 
 p,
